--- a/games/valorant.html
+++ b/games/valorant.html
@@ -14,9 +14,10 @@
     <title>Yeetserver</title>
 <body onload="startup()">
 
-<button id="random_map" onclick="randomAgent()">Random Map</button>
+<p style="font-size: 150%;" id="text">Placeholder</p>
+<button id="random_map" onclick="randomMap()">Random Map</button>
 <button id="random_agent" onclick="randomAgent()">Random Agent</button>
-<button id="random_weapon" onclick="randomAgent()">Random Weapon</button>
+<button id="random_weapon" onclick="randomWeapon()">Random Weapon</button>
 
 </body>
 </html>
