--- a/policy.html
+++ b/policy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <script src="/universal/appearance.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" type="image/x-icon" href="./images/index-icon.png"/>
     <link rel="stylesheet" href="/style/index.css">
