--- a/404.html
+++ b/404.html
@@ -2,6 +2,8 @@
 <html lang="de">
 <head>
     <script src="/universal/universal.js"></script>
+    <script src="/universal/appearance.js"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link rel="stylesheet" href="/universal/universal.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" type="image/x-icon" href="./images/ghost.png"/>
@@ -9,7 +11,6 @@
     <meta property="og:title" content="404">
     <meta property="og:description" content="404 Site not found!">
     <meta property="og:image" content="https://yeetserver.github.io/images/404-error.png"/>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <title>404</title>
 </head>
 <body onload="startup()">
