--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <script defer src="/universal/appearance.js"></script>
-    <script defer src="/universal/universal.js"></script>
+    <script src="/universal/appearance.js"></script>
+    <script src="/universal/universal.js"></script>
     <link rel="stylesheet" href="/universal/universal.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="shortcut icon" type="image/x-icon" href="./images/index-icon.png"/>
