--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <select onchange="appearanceButton()" id="appearances">
         <option value="darkmode">Darkmode</option>
         <option value="whitemode">Whitemode</option>
-        <option value="colorful">Colorful</option>
+        <option value="sunrise">Sonnenaufgang</option>
+        <option value="random">Zufällig</option>
     </select>
 </div>
 
