--- a/contributions.html
+++ b/contributions.html
@@ -1,2 +1,48 @@
-404 Error Icon - Ghozi Muhtarom
-Ghost Icon - Smashicons
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <script src="/universal/appearance.js"></script>
+    <script src="/universal/universal.js"></script>
+    <link rel="stylesheet" href="/universal/universal.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/index-icon.png"/>
+    <meta property="og:type" content="Website">
+    <meta property="og:title" content="Yeetserver Website">
+    <meta property="og:description" content="Die Offizielle Website des Yeetserver's"/>
+    <meta property="og:image" content="https://yeetserver.github.io/images/index-icon.png"/>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <title>Yeetserver</title>
+</head>
+<body onload="startup()">
+
+<contributions class="contributions">
+    <p>
+    "404 Error" Icon - <a class="link" href="https://www.flaticon.com/de/autoren/ghozi-muhtarom">Ghozi Muhtarom</a><br>
+    "Ghost Icon" - <a id="link" href="https://www.flaticon.com/de/autoren/smashicons">Smashicons</a>
+    </p>
+</contributions>
+
+<style>
+    .contributions {
+        font-size: xx-large;   
+    }
+    .contributions:hover {
+        background-color: rgb(42, 140, 226);
+    }
+    a:link {
+    color: rgb(255, 217, 0);
+    }
+    a:visited {
+    color: rgb(255, 153, 0);
+    }
+    a:hover {
+    color: hotpink;
+    }
+    a:active {
+    color: hotpink;
+    }
+</style>
+
+</body>
+</html>
+
