--- a/games/valorant.html
+++ b/games/valorant.html
@@ -16,12 +16,85 @@
     <title>Yeetserver</title>
 <body onload="startup()">
 
-<p style="font-size: 150%;" id="displayText"></p>
-<div id="buttons" class="buttonsClass">
-    <button id="random_map" onclick="randomMap()">Random Map</button>
-    <button id="random_agent" onclick="randomAgent()">Random Agent</button>
-    <button id="random_weapon" onclick="randomWeapon()">Random Weapon</button>
+<div class="container">
+    <a class="btn" id="random_map" onclick="randomMap()">Zufällige Karte</a>
+    <a></a>
+    <a class="btn" id="random_agent" onclick="randomAgent()">Zufälliger Agent</a>
+    <a></a>
+    <a class="btn" id="random_weapon" onclick="randomWeapon()">Zufällige Waffen</a>
+    <a></a>
+    <a class="btn" id="random_challenge" onclick="randomChallenge()">Zufällige Herausforderungen</a>
 </div>
+
+<p class="displayText" id="displayText"></p>
+
+
+<style>
+
+* {
+    padding: 0;
+    margin: 0;
+}
+
+.container {
+    color: var(--foreground_appearance);
+    background-color: var(--background_appearance);
+    border-block-start-color: var(--background_appearance);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 12vh;
+}
+
+a {
+    font-size: 1rem;
+    padding: 0.5rem 2rem;
+    text-transform: uppercase;
+}
+
+.btn {
+    text-decoration: none;
+    border: 1px solid rgb(146, 148, 248);
+    position: relative;
+    overflow: hidden;
+}
+
+.btn:hover {
+  box-shadow: 1px 1px 25px 10px rgba(146, 148, 248, 0.4);
+}
+
+.btn:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        120deg,
+        transparent,
+        rgba(146, 148, 248, 0.4),
+        transparent
+    );
+    transition: all 650ms;
+}
+
+.btn:hover:before {
+  left: 100%;
+}
+
+/* */
+
+.displayText {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 8vh;
+    margin-top: 30vh;
+    text-align: center;
+    
+}
+</style>
 
 </body>
 </html>
