--- a/policy.html
+++ b/policy.html
@@ -2,16 +2,22 @@
 <html lang="de">
 <head>
     <script src="/universal/appearance.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="/universal/universal.js"></script>
+    <link rel="stylesheet" href="/universal/universal.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="shortcut icon" type="image/x-icon" href="./images/index-icon.png"/>
-    <link rel="stylesheet" href="/style/index.css">
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Yeetserver Website">
-    <meta property="og:description" content="Die Offizielle Website des Yeetserver's">
-    <script src="/scripts/index.js"></script>
+    <meta property="og:description" content="Die Offizielle Website des Yeetserver's"/>
+    <meta property="og:image" content="https://yeetserver.github.io/images/index-icon.png"/>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <title>Yeetserver - Policy</title>
+    <title>Yeetserver</title>
 </head>
 <body onload="startup()">
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+Ipsum inventore rerum a doloremque earum quis officiis aliquam,<br>
+consequuntur quidem minus eveniet iste, hic fugiat totam sint deserunt,<br>
+facilis sequi. Ipsam?</p>
 </body>
 </html>
