Added new appearance option

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <option value="darkmode">Darkmode</option>
         <option value="whitemode">Whitemode</option>
         <option value="sunrise">Sonnenaufgang</option>
+        <option value="terminal">Terminal</option>
         <option value="random">Zufällig</option>
     </select>
 </div>
