--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 
 
 <div class="item">
-    <img src="/images/404-error.png" alt="404-error" style="width: 75%;"/>
+    <img src="/images/404-error.png" alt="404-error" style="width: 75%;" id="image"/>
     <p style="font-size: 150%;" id="text"></p>
 </div>
 
@@ -32,6 +32,18 @@
     margin-left: auto;
     margin-right: auto;
 }
+.item {
+    opacity: 1.0;
+    transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -webkit-transition: opacity 1s ease-in-out;
+}
+.item:hover{
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
+    -moz-transition: opacity 2s ease-in-out;
+    -webkit-transition: opacity 2s ease-in-out;
+}
 </style>
 
 <script>
@@ -39,16 +51,10 @@
     url = url.replace(".html", "");
     url = url.replace("http://", "");
     url = url.replace("https://", "");
-    if (url !== "yeetserver.github.io/404") {
-        document.getElementById("text").innerHTML =
-        `Grüß dich, Fremder! 😀`;
-        document.title = `${url}`;
-    }
-    else {
-        document.getElementById("text").innerHTML =
-        `Die Seite "${url}" ist nicht verfügbar`;
-        document.title = `${url}`;
-    }
+
+    document.getElementById("text").innerHTML =
+    `Die Seite "${url}" ist nicht verfügbar`;
+    document.title = `${url}`;
 </script>
 
 </body>
