Updated title's and og's

--- a/404.html
+++ b/404.html
@@ -7,11 +7,7 @@
     <link rel="stylesheet" href="/universal/universal.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="shortcut icon" type="image/x-icon" href="./images/ghost.png"/>
-    <meta property="og:type" content="Website">
-    <meta property="og:title" content="404">
-    <meta property="og:description" content="404 Site not found!">
-    <meta property="og:image" content="https://yeetserver.github.io/images/404-error.png"/>
-    <title>404</title>
+    <title>Yeetserver - 404</title>
 </head>
 <body onload="startup()">
 
