--- a/policy.html
+++ b/policy.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="/universal/universal.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="shortcut icon" type="image/x-icon" href="./images/index-icon.png"/>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Yeetserver Website">
     <meta property="og:description" content="Die Offizielle Website des Yeetserver's"/>
     <meta property="og:image" content="https://yeetserver.github.io/images/index-icon.png"/>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <title>Yeetserver</title>
+    <title>Policy - Yeetserver</title>
 </head>
 <body onload="startup()">
 
