--- a/games/valorant.html
+++ b/games/valorant.html
@@ -7,6 +7,7 @@
     <link rel="" href="/universal/jsonscript.js">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="shortcut icon" type="image/x-icon" href="/images/index-icon.png"/>
+    <title>Valorant - Yeetserver</title>
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Yeetserver Website">
     <meta property="og:description" content="Die Offizielle Website des Yeetserver's"/>
