--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
     <link rel="shortcut icon" type="image/x-icon" href="./images/index-icon.png"/>
     <link rel="stylesheet" href="/style/index.css"/>
     <script src="/scripts/index.js"></script>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Yeetserver Website">
     <meta property="og:description" content="Die Offizielle Website des Yeetserver's"/>
     <meta property="og:image" content="https://yeetserver.github.io/images/index-icon.png"/>
-    <title>Yeetserver</title>
+    <title>Yeetserver</title> 
 </head>
 <body onload="startup()">
 
-<button class="delete-all-cookies-class" id="delete-cookies-button" onclick="deleteAllCookies()">Alle Cookies löschen</button>
-<button class="show-cookies-class" id="show-cookies-button" onclick="alert(document.cookie)">Gespeicherte Cookies anzeigen</button>
-
-<div class="appearance-dropdown">
+<div class="dropdown">
     <select onchange="appearanceButton()" id="appearances">
         <option value="darkmode">Darkmode</option>
         <option value="whitemode">Whitemode</option>
@@ -28,13 +24,14 @@
         <option value="terminal">Terminal</option>
         <option value="random">Zufällig</option>
     </select>
+    <button class="delete-all-cookies-class" id="delete-cookies-button" onclick="deleteAllCookies()">Alle Cookies löschen</button>
+<button class="show-cookies-class" id="show-cookies-button" onclick="alert(document.cookie)">Gespeicherte Cookies anzeigen</button>
 </div>
 
 <div class="random-emoji-class">
-    <p>Dies ist die offizielle Website des Yeetserver's.
-    <br>Leider ist sie aktuell nicht fertiggestellt. 👷‍♂️🚧
-    </p>
-    <label id="random-emoji-label" class="random-emoji-label-class"></label>
+    <div>
+        <label id="random-emoji-label" class="random-emoji-label-class"></label>
+    </div>
     <script>
     const myArray = [
     "😀",
@@ -55,6 +52,10 @@
     <b>Simpler Rechenapperat ➡ &nbsp; </b>
     <button name="calcButton" onclick="calculator()" class="calcButtonClass">🧮</button>
 </div>
+
+<br><a href="https://yeetserver.github.io/games/valorant">Yeetserver/Games</a>
+<br><a href="https://yeetserver.github.io/contributions">Yeetserver/Contributions</a>
+<br><a href="https://yeetserver.github.io/policy">Yeetserver/Policy</a>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <div id="overlay">
