--- a/settings/contributions.html
+++ b/settings/contributions.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <script src="/universal/appearance.js"></script>
-    <script src="/universal/universal.js"></script>
-    <link rel="stylesheet" href="/universal/universal.css">
+    <!-- Scripts & CSS -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <link rel="shortcut icon" type="image/x-icon" href="./images/index-icon.png"/>
+    <link rel="stylesheet" href="/src/dependencies/appearance.css">
+    <script src="/src/dependencies/functions.js"></script>
+    <script src="/src/dependencies/cookies.js"></script>
+    <script defer src="/src/dependencies/appearance.js"></script>
+    <!-- Titlebar -->
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/index-icon.png"/>
+    <title>Yeetserver - Contributions</title>
+    <!-- Open Graph protocol -->
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Yeetserver Website">
     <meta property="og:description" content="Die Offizielle Website des Yeetserver's"/>
-    <meta property="og:image" content="https://yeetserver.github.io/images/index-icon.png"/>
-    <title>Contributions - Yeetserver</title>
+    <meta property="og:image" content="https://yeetserver.github.io/assets/images/index-icon.png"/>
+    <!-- Website specific contents -->
 </head>
 <body onload="startup()">
 
