--- a/settings/help.html
+++ b/settings/help.html
@@ -9,7 +9,7 @@
     <script defer src="/src/dependencies/appearance.js"></script>
     <!-- Titlebar -->
     <link rel="shortcut icon" type="image/x-icon" href="/assets/images/index-icon.png"/>
-    <title>Yeetserver</title>
+    <title>Yeetserver - Help</title>
     <!-- Open Graph protocol -->
     <meta property="og:type" content="Website">
     <meta property="og:title" content="Yeetserver Website">
@@ -17,19 +17,14 @@
     <meta property="og:image" content="https://yeetserver.github.io/assets/images/index-icon.png"/>
     <!-- Website specific contents -->
 </head>
-<body onload="startup()">
+<body>
 
-<a class="link" href="https://yeetserver.github.io/games/valorant">Valorant Randomizer</a>
-
-<style>
-    .contributions {
-        font-size: xx-large;   
-    }
-    .contributions:hover {
-        background-color: rgb(42, 140, 226);
-    }
-</style>
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Autem odit quasi quo similique ad unde tempore delectus voluptatum.
+    A vel fugit recusandae reprehenderit officia reiciendis quidem,
+    omnis expedita cumque cupiditate.
+</p>
 
 </body>
 </html>
-
