Added missing import

--- a/games/valorant.html
+++ b/games/valorant.html
@@ -17,6 +17,7 @@
     <meta property="og:image" content="https://yeetserver.github.io/assets/images/index-icon.png"/>
     <!-- Website specific contents -->
     <link rel="stylesheet" href="/games/valorant.css">
+    <script defer src="/src/scripts/valorant.js"></script>
 <body onload="startup()" onunload="deleteValorantData()">
 
 <div class="container">
