--- a/settings/login.html
+++ b/settings/login.html
@@ -34,7 +34,6 @@
 </div>
 
 </body>
-
 <style>
 body {
 padding: 0;
@@ -56,6 +55,8 @@ margin: 2vh;
         setCookie("CLIENT_NAME", document.getElementById("name").value)
         var DatabaseKey = document.getElementById("key").value
         setCookie("DBAKEYVAL", DatabaseKey)
+        var GetBack = document.URL.split("?");
+        window.location.replace("https://yeetserver.github.io/"+GetBack[1])
     }
 </script>
 </html>
