--- a/settings/policy.html
+++ b/settings/policy.html
@@ -19,9 +19,25 @@
 </head>
 <body onload="startup()">
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-Ipsum inventore rerum a doloremque earum quis officiis aliquam,<br>
-consequuntur quidem minus eveniet iste, hic fugiat totam sint deserunt,<br>
-facilis sequi. Ipsam?</p>
+<style>
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        width: 10%;
+        border-radius: 5px;
+    }    
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
+</style>
+
+    
+<h2>Round Card</h2>
+    
+<div class="card">
+    <h4><b>Jane Doe</b></h4> 
+    <p>Interior Designer</p> 
+</div>
+
 </body>
 </html>
