--- a/games/valorant.html
+++ b/games/valorant.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="https://yeetserver.github.io/assets/images/index-icon.png"/>
     <!-- Website specific contents -->
     <link rel="stylesheet" href="/games/valorant.css">
-    <script defer src="/src/scripts/valorant.js"></script>
+    <script defer src="/games/valorant.js"></script>
 <body onload="startup()" onunload="deleteValorantData()">
 
 <div class="container">
@@ -46,7 +46,6 @@
 <div class="displayText">
     <p id="displayText"></p>
 </div>
-
 
 </body>
 </html>
