--- a/index.html
+++ b/index.html
@@ -18,6 +18,30 @@
     <!-- Website specific contents -->
     <link rel="stylesheet" href="src/style/index.css"/>
     <script src="src/scripts/index.js"></script>
+    <style>
+    #overlay {
+        position: fixed;
+        display: none;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,0.5);
+        z-index: 2;
+    }
+
+    #text{
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        font-size: 20px;
+        color: white;
+        transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+    }
+    </style>
 </head>
 <body onload="startup()">
 
@@ -39,8 +63,6 @@
     <br><a href="https://yeetserver.github.io/settings/policy">Yeetserver/Policy</a>
 </div>
 
-
-
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <div id="overlay">
     <div id="text">Diese Seite benutzt Cookies um getroffene Einstellungen zu Speichern<br>
@@ -48,3 +70,14 @@
     <button name="hidecookiebanner" onclick="off()">OK</button></div>
 </body>
 </html>
+
+<script>
+function on() {
+    document.getElementById("overlay").style.display = "block";
+}
+
+function off() {
+    document.getElementById("overlay").style.display = "none";
+    document.cookie = "visited=true";
+}
+</script>
