--- a/bingguesser/index.html
+++ b/bingguesser/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph protocol -->
     <meta property="og:type" content="Website">
     <meta property="og:title" content="BINGGUESSER">
-    <meta property="og:description" content="Die Offizielle Website des Yeetserver's"/>
+    <meta property="og:description" content="Trete einem Spiel bei oder erstelle ein neues"/>
     <meta property="og:image" content="https://yeetserver.github.io/assets/images/index-icon.png"/>
     <!-- Website specific contents -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
