--- a/bingguesser/streetsidecheck.html
+++ b/bingguesser/streetsidecheck.html
@@ -118,7 +118,7 @@ body {
 #street-view {
     position: absolute;
     margin: auto;
-    border: 3px solid green;
+    border: 1px solid rgb(0, 110, 255);
     padding: 10px;
     top: 20vh;
     left: 25vw;
@@ -130,7 +130,7 @@ body {
     color: white;
     position: absolute;
     margin: auto;
-    border: 3px solid green;
+    border: 1px solid rgb(0, 110, 255);
     padding: 10px;
     top: 20vh;
     left: 0.5vw;
@@ -144,7 +144,7 @@ body {
     color: white;
     position: absolute;
     margin: auto;
-    border: 3px solid green;
+    border: 1px solid rgb(0, 110, 255);
     padding: 10px;
     top: 20vh;
     right: 0.5vw;
